--- a/menu.html
+++ b/menu.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0">
+   
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav id="menu">
         <div class="iconSide">
             <a href="#"> 
-                <img  class="icon" src="logo.png" alt="logo icon">
+                <img  
+                 class="icon"
+                 src="logo.png"
+                 alt="logo icon">
             </a> 
         </div>
         <div class="link">
@@ -24,6 +29,7 @@
         </div>
         
     </nav>
-    
+
+    <script src="./script.js"></script>
 </body>
 </html>
