Home petite modif

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="categorie.html">Prix mini</a></li>
                     <li><a href="categorie.html">Contact</a></li>
                     <li><a href="categorie.html">More</a></li>
-                    <li><a href="carousel.html">Carousel</a></li>
+                   
                 </ul>
             </div>
 
@@ -46,21 +46,21 @@
     <!-- Bandeau ecriture Home -->
     <div class="welcome">
         <div class="contentBienvenu">
-            <div>
+            <div style="color:white; text-shadow: none;">
                 <span>Bienvenue</span>
             </div>
 
-            <div>
-                <p>sur le e-shop de typh</p>
-                <p>patati patata lalalla </p>
-                <p>patati patata lalalla </p>
+            <div ></div>
+                <p style="color:black">sur le e-shop de typh</p>
+                <p style="color:black">patati patata lalalla </p>
+                <p style="color:black">patati patata lalalla </p>
             </div>
 
         </div>
     </div>
 
     <!-- Nos nouveautés avant carousel -->
-    <div style="text-align: center; height: 200px;">
+    <div style="text-align: center; height: 200px; background-color: rgb(245, 235, 224);">
 
         <h1>
             Nos Nouveautés
