--- a/html/index.html
+++ b/html/index.html
@@ -4,32 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Accueil</title>
 </head>
 
 <body>
-
 
     <header>
         <nav>
             <div class="iconSide">
                 <a href="#">
-                    <img class="icon" src="icon/logo.png" alt="logo icon">
+                    <img class="icon" src="../assets/icon/logo.png" alt="logo icon">
                 </a>
             </div>
             <div class="link">
                 <ul>
-                    <li> <a href="categorie.html">Accueil</a></li>
+                    <li> <a href="test.html">Test</a></li>
                     <li><a href="categorie.html">Produits</a></li>
                     <li><a href="categorie.html">Chez soi</a></li>
                     <li><a href="categorie.html">Prix mini</a></li>
                     <li><a href="categorie.html">Contact</a></li>
                     <li><a href="categorie.html">More</a></li>
-                   
+
                 </ul>
             </div>
 
@@ -50,29 +49,23 @@
                 <span>Bienvenue</span>
             </div>
 
-            <div ></div>
-                <p style="color:black">sur le e-shop de typh</p>
-                <p style="color:black">patati patata lalalla </p>
-                <p style="color:black">patati patata lalalla </p>
-            </div>
-
+            <div></div>
+            <p style="color:black">sur le e-shop de typh</p>
+            <p style="color:black">patati patata lalalla </p>
+            <p style="color:black">patati patata lalalla </p>
         </div>
+
+    </div>
     </div>
 
     <!-- Nos nouveautés avant carousel -->
-    <div style="text-align: center; height: 200px; background-color: rgb(245, 235, 224);">
-
-        <h1>
-            Nos Nouveautés
-        </h1>
+    <div class="titleCarousel">
+      NOS NOUVEAUX PRODUITS
     </div>
 
     <!-- Carousel -->
-    <div class="contentCarousel" style="height: 500px">
-
-        <h1 style="background-color: rebeccapurple; text-align: center;">
-            Carousel
-        </h1>
+    <div class="contentCarousel" >
+        <div id="cardCarousel"></div>
     </div>
 
     <!-- Btn En voirs plus qui envois à la page product -->
@@ -129,8 +122,10 @@
     </footer>
 
 
-    <script src="./script.js"></script>
 
+
+
+    <script src="../js/home.js"></script>
 </body>
 
 </html>
