Carousel liaison au detail
La liaison au detail se fait correctement.
Debut du style detail.
A merger

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="link">
                 <ul>
-                    <li> <a href="test.html">Test</a></li>
+                    <li> <a href="index.html">Accueil</a></li>
                     <li><a href="categorie.html">Produits</a></li>
                     <li><a href="categorie.html">Chez soi</a></li>
                     <li><a href="categorie.html">Prix mini</a></li>
@@ -141,7 +141,7 @@
    
     <!-- Link SwiperJS script JS-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="../js/home.js" async></script>
+    <script src="../js/home.js" ></script>
 
 </body>
 
