--- a/html/productDetail.html
+++ b/html/productDetail.html
@@ -1,16 +1,80 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/detail.css">
+  <title>Document</title>
 </head>
+
 <body>
 
-  <div id="product">
-    
+  <header>
+    <nav>
+      <div class="iconSide">
+        <a href="#">
+          <img class="icon" src="../assets/icon/logo.png" alt="logo icon">
+        </a>
+      </div>
+      <div class="link">
+        <ul>
+          <li> <a href="index.html">Accueil</a></li>
+          <li><a href="categorie.html">Produits</a></li>
+          <li><a href="categorie.html">Chez soi</a></li>
+          <li><a href="categorie.html">Prix mini</a></li>
+          <li><a href="categorie.html">Contact</a></li>
+          <li><a href="categorie.html">More</a></li>
+
+        </ul>
+      </div>
+
+      <div>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+
+    </nav>
+  </header>
+
+  <div id="containerDetail">
+    <div id="cadreDetail">
+     
+      <div id="ligneTop">
+        <div id="historiqueCategorie">Historique Categorie</div>
+        <div id="btnPreview"> <code>&lt;</code> Precedent | Suivant  <code>&gt;</code></div>
+      </div>
+
+
+      <div id="titleDetail">Title</div>
+
+      <div id="contentDetail">
+
+        <div id="contentPhoto">
+          <div id="colonnePhoto">
+            <div>photo1</div>
+            <div>photo2</div>
+            <div>photo3</div>
+          </div>
+          <div id="photo"></div>
+        </div>
+
+        <div id="contentInfo">
+          <div id="description"></div>
+          <div id="prix"></div>
+          <div id="btnAchat"></div>
+        </div>
+
+
+      </div>
+    </div>
   </div>
 
-        <script src="../js/detail.js" async></script>
+<!--  <h1>Product Detail</h1>
+      <div id="detailsContainer"></div>-->
+
+  <script src="../js/detail.js"></script>
 </body>
+
 </html>
