Mise en place des infos du produits
La page html affiche les attribut du produits correctement

--- a/html/productDetail.html
+++ b/html/productDetail.html
@@ -47,7 +47,7 @@
       </div>
 
 
-      <div id="titleDetail">Title</div>
+      <div id="titleDetail"></div>
 
       <div id="contentDetail">
 
@@ -57,13 +57,13 @@
             <div>photo2</div>
             <div>photo3</div>
           </div>
-          <div id="photo"></div>
+          <div id="photo">Photo actuel </div>
         </div>
 
         <div id="contentInfo">
-          <div id="description"></div>
-          <div id="prix"></div>
-          <div id="btnAchat"></div>
+          <div id="description">description</div>
+          <div id="prix">prix </div>
+          <div id="btnAchat"><button>Ajouter au panier </button></div>
         </div>
 
 
