Stripe test fait
Paiement test effectué !!!
la configuration fonctionne ( mais tres grossiere )

--- a/html/productDetail.html
+++ b/html/productDetail.html
@@ -63,7 +63,7 @@
         <div id="contentInfo">
           <div id="description">description</div>
           <div id="prix">prix </div>
-          <div id="btnAchat"><button>Ajouter au panier </button></div>
+          <div id="btnAchat" ><a href="stripe.html" >Ajouter au panier </a></div>
         </div>
 
 
