Inscription simple faite
L'inscription front back est faite

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
             <div class="link">
                 <ul>
                     <li> <a href="index.html">Accueil</a></li>
-                    <li><a href="categorie.html">Produits</a></li>
+                    <li><a href="inscription.html">Inscription</a></li>
                     <li><a href="categorie.html">Chez soi</a></li>
                     <li><a href="categorie.html">Prix mini</a></li>
                     <li><a href="categorie.html">Contact</a></li>
