Ajout du login et du register
Changement pour prendre l'attribut carousel des produits.
Modification pour l'inscription et la connexion via le front
et modif pour le cors orignin

--- a/html/index.html
+++ b/html/index.html
@@ -14,10 +14,11 @@
 
 <body>
 
+    <!-- Menu -->
     <header>
         <nav>
             <div class="iconSide">
-                <a href="#">
+                <a href="index.html">
                     <img class="icon" src="../assets/icon/logo.png" alt="logo icon">
                 </a>
             </div>
@@ -25,7 +26,7 @@
                 <ul>
                     <li> <a href="index.html">Accueil</a></li>
                     <li><a href="inscription.html">Inscription</a></li>
-                    <li><a href="categorie.html">Chez soi</a></li>
+                    <li><a href="connexion.html">Connexion soi</a></li>
                     <li><a href="categorie.html">Prix mini</a></li>
                     <li><a href="categorie.html">Contact</a></li>
                     <li><a href="categorie.html">More</a></li>
@@ -40,6 +41,11 @@
                 </form>
             </div>
 
+            <div id="log">
+                <a href="log.html">
+                    <img class="icon" src="../assets/icon/login.png" alt="login icon">
+                </a>
+            </div>
         </nav>
     </header>
 
