--- a/html/connexion.html
+++ b/html/connexion.html
@@ -1,10 +1,19 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cacher et Montrer un Élément</title>
+  
 </head>
 <body>
-    
+
+    <button id="toggleButton">Afficher l'élément</button>
+
+    <div id="myElement">
+        <p>Ceci est un élément caché.</p>
+    </div>
+
+    <script src="../js/test.js"></script>
 </body>
 </html>
