--- a/html/stripe.html
+++ b/html/stripe.html
@@ -14,14 +14,23 @@
     <button id="checkout-button">Payer</button>
 
     <script>
-        
+
+
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return parts.pop().split(';').shift();
+        }
+
+        const jwtFromCookie = getCookie('token');
         const BASE_URL = "http://localhost:8080";
-        const stripe = Stripe('pk_test_51MUWSJAuJzjqYWzf2mdG26Me4DgROAqkcBbdBG3BfCLRp1piAc2BF71URsaRZeaabbadrY3Edf6hfDnbwVPpT44x00JAcD3xL6');  
+        const stripe = Stripe('pk_test_51MUWSJAuJzjqYWzf2mdG26Me4DgROAqkcBbdBG3BfCLRp1piAc2BF71URsaRZeaabbadrY3Edf6hfDnbwVPpT44x00JAcD3xL6');
 
         document.getElementById('checkout-button').addEventListener('click', () => {
-            fetch(BASE_URL+'/create-checkout-session', {
+            fetch(BASE_URL + '/create-checkout-session', {
                 method: 'POST',
                 headers: {
+                    'Authorization': `Bearer ${jwtFromCookie}`, 
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
