--- a/html/index.html
+++ b/html/index.html
@@ -25,10 +25,8 @@
             <div class="link">
                 <ul>
                     <li> <a href="index.html">Accueil</a></li>
+                    <li><a href="productList.html" onclick="getProductList()">Produits</a></li>
                  
-                    <li><a href="categorie.html">Prix mini</a></li>
-                    <li><a href="categorie.html">Contact</a></li>
-                    <li><a href="categorie.html">More</a></li>
 
                 </ul>
             </div>
@@ -147,6 +145,7 @@
     <!-- Link SwiperJS script JS-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../js/home.js" ></script>
+    <script src="../js/menu.js"></script>
 
 </body>
 
