Product Detail design
Designe sur la page detail product.
Debut de la dynamisation du menu

--- a/html/index.html
+++ b/html/index.html
@@ -25,9 +25,7 @@
             <div class="link">
                 <ul>
                     <li> <a href="index.html">Accueil</a></li>
-                    <li><a href="productList.html" onclick="getProductList()">Produits</a></li>
-                 
-
+                    <li><a href="productList.html" >Produits</a></li>
                 </ul>
             </div>
 
