--- a/html/test.html
+++ b/html/test.html
@@ -1,14 +1,14 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/menu.css">
-</head>
-<body>
-    
-    <h1>Test </h1>
+    <link rel="stylesheet" href="../css/menu.css" />
+  </head>
+  <body>
+    <!-- Conteneur pour le menu -->
+    <div id="menu-container"></div>
 
     <script src="../js/test.js"></script>
-</body>
+  </body>
 </html>
