--- a/html/test.html
+++ b/html/test.html
@@ -4,11 +4,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/menu.css" />
+    <link rel="stylesheet" href="../css/test.css">
   </head>
   <body>
     <!-- Conteneur pour le menu -->
     <div id="menu-container"></div>
+ 
+      <!-- Bouton pour afficher/masquer le bandeau -->
+      <button id="toggleButton">☰ Ouvrir/fermer</button>
+
+      <!-- Bandeau vertical -->
+      <div id="bandeauVertical" class="bandeau">
+          <ul>
+              <li><a href="#">Accueil</a></li>
+              <li><a href="#">À propos</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+      </div>
 
     <script src="../js/test.js"></script>
+    <script src="../js/menu.js"></script>
   </body>
 </html>
