--- a/html/log.html
+++ b/html/log.html
@@ -4,20 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/log.css">
+    <link rel="stylesheet" href="../css/menu.css">
     <title>Connexion</title>
 </head>
 
 <body>
 
 
-    <div class="iconSide">
-        <a href="index.html">
-            <img class="icon" src="../assets/icon/back.png" alt="back icon">
-            <p>Retour à l'accueil </p>
-        </a>
-    </div>
-
-
+    <!-- Conteneur pour le menu -->
+    <div id="menu-container"></div>
 
     <div class="signinSide">
         <div class="signinCard">
@@ -78,6 +73,7 @@
 
 
     <script src="../js/log.js"></script>
+    <script src="../js/menu.js"></script>
 
 </body>
 
