--- a/html/index.html
+++ b/html/index.html
@@ -27,9 +27,9 @@
                 </div>
 
                 <div></div>
-                <p >Sur le E-shop de Sperenza</p>
+                <p >Sur le E-shop de Speranza</p>
                 <p >Vous y trouverez touts les produits confectionné à la main avec amour et pation </p>
-                <p >Entrez dans l'univers Sperenza et decouvrez les produits qui vous ressemble et qui vous correspondent </p>
+                <p >Entrez dans l'univers Speranza et decouvrez les produits qui vous ressemblent et qui vous correspondent </p>
             </div>
 
         </div>
