--- a/html/log.html
+++ b/html/log.html
@@ -69,7 +69,7 @@
     
                         <button class="btnLogin" type="submit">S'inscrire</button>
                     </form>
-                    <div>
+                    <div class="space">
                         <button onclick="show()">Voulez vous vous connectez ? </button>
                     </div>
                     
@@ -80,6 +80,13 @@
         </div>
     </div>
 
+
+    <div>
+        <button onclick="test()">Test</button>
+        <button onclick="test2()">Test2</button>
+        <button onclick="test3()">Test3</button>
+        <button onclick="fetchProtectedData()">fetchProtectedData</button>
+    </div>
 
   
 
