--- a/html/log.html
+++ b/html/log.html
@@ -79,6 +79,10 @@
             </div>
         </div>
 
+
+        <button class="btnLogin" onclick="fetchDataWithToken()">Test</button>
+        <button class="btnLogin" onclick="logout()">logout</button>
+
         <script src="../js/log.js"></script>
         <script src="../js/menu.js"></script>
 
