--- a/html/productDetail.html
+++ b/html/productDetail.html
@@ -56,6 +56,7 @@
           <div id="btnAchat">
 
             <button onclick="addProductToPanier()">Ajouter au panier </button>
+           
         
           </div>
         </div>
@@ -68,7 +69,7 @@
 
   <script src="../js/detail.js"></script>
   <script src="../js/menu.js"></script>
-
+  <script src="../js/test.js"></script>
 </body>
 
 </html>
