--- a/html/productList.html
+++ b/html/productList.html
@@ -26,6 +26,7 @@
 
     <script src="../js/menu.js"></script>
     <script src="../js/list.js"></script>
+    <script src="../js/test.js"></script>
 </body>
 
 </html>
