Ajout des produits au panier
le panier est stocké dans le localStorage.
il ajoute les produits correctement.
il faut maintenant faire le css

--- a/html/productDetail.html
+++ b/html/productDetail.html
@@ -46,8 +46,11 @@
           <button id="closeSidebar" class="close-btn">&times;</button>
           <h2>Votre Panier</h2>
           <p>Ajoutez des articles à votre panier ici.</p>
+          <div id="productFromPanier"></div>
       </div>
   </div>
+
+  <!-- Contenu de la page du produit -->
   <div id="containerDetail">
     <div id="cadreDetail">
 
@@ -90,7 +93,8 @@
 
           <div id="btnAchat">
 
-            <button onclick="addProductToPanier()">Ajouter au panier </button>
+            <button onclick="addProductToPanier()">
+              Ajouter au panier </button>
            
         
           </div>
